Fixed spacing with icons and text

--- a/src/components/Home/HomePage.css
+++ b/src/components/Home/HomePage.css
@@ -148,7 +148,7 @@ body {
   color: rgba(0,0,0,1);
   position: absolute;
   top: 1535px;
-  left: 522px;
+  left: 622px;
   font-family: Avenir;
   font-weight: Heavy;
   font-size: 36px;
@@ -160,7 +160,7 @@ body {
   color: rgba(0,0,0,1);
   position: absolute;
   top: 1535px;
-  left: 93px;
+  left: 1073px;
   font-family: Avenir;
   font-weight: Heavy;
   font-size: 36px;
@@ -177,7 +177,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1371px;
-  left: 506px;
+  left: 636px;
   overflow: hidden;
 }
 .v2_66 {
@@ -203,7 +203,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1371px;
-  left: 83px;
+  left: 1079px;
   overflow: hidden;
 }
 .v2_71 {
@@ -223,7 +223,7 @@ body {
   color: rgba(0,0,0,1);
   position: absolute;
   top: 1618px;
-  left: 575px;
+  left: 565px;
   font-family: Avenir;
   font-weight: Roman;
   font-size: 24px;
@@ -235,7 +235,7 @@ body {
   color: rgba(0,0,0,1);
   position: absolute;
   top: 1618px;
-  left: 159px;
+  left: 1009px;
   font-family: Avenir;
   font-weight: Roman;
   font-size: 24px;
